# briefcase

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOY_RAILWAY.md  DOCKER.md  README.md  docker-compose.prod.yml  docker-compose.yml  railway.json  railway.toml  railway.yaml  test-document.txt
apps/backend/: .dockerignore  .env.railway.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  alembic.ini  debug_login.py  main.py  nixpacks.toml  pyproject.toml  railway.json  seed_db.py  test.db-journal  test_cron_scripts.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 06dc95546b8b_create_users_table.py  156eb2cec3b2_add_name_field_to_users_table.py  5ac739b4741e_add_permissions_tables.py  63a52c18ad50_add_document_and_access_log_tables.py  9213d7e78a4e_fix_user_id_column_length.py  9ff99e95d43c_create_permissions_system_tables.py  c822278260cd_add_encryption_iv_field_to_documents.py  dc296d05e9d1_add_lifecycle_management_tables.py
apps/backend/app/: __init__.py  main.py  requirements.txt
apps/backend/app/api/: __init__.py  dependencies.py
apps/backend/app/core/: __init__.py  config.py  database.py  encryption.py  security.py
apps/backend/app/dependencies/: permissions.py
apps/backend/app/models/: __init__.py  document.py  document_access_log.py  lifecycle.py  permissions.py  user.py
apps/backend/app/schemas/: __init__.py  auth.py  document.py  user.py  (+3 more)
apps/backend/tests/: conftest.py  test_auth.py  test_document_api.py  test_document_models.py  test_encryption.py  test_lifecycle_service.py  test_users.py
(+129 files in other folders)
